# sphaera-note-api

./: .gitignore  README.md
materials/documentation/Writerside/: s.tree
materials/documentation/Writerside/topics/: empty-md-topic.md  router-service.md
proto/: auth.proto  authorization.proto
services/authorization/: README.md
services/database/: README.md
services/gateaway/: CMakeLists.txt  README.md  conanfile.txt
services/gateaway/src/: main.cc
services/gateaway/src/routes/: route.cc  route.h
services/gateway/: CMakeLists.txt  README.md  conanfile.txt
services/gateway/data/: .env
services/gateway/src/: main.cc
services/gateway/src/grpc/: client.cc  client.h
services/gateway/src/routes/: route.cc  route.h
services/notes/: README.md
services/router/: README.md
services/todo/: README.md
web-lib/: CMakeLists.txt  conanfile.txt
web-lib/src/: dotenv.cc  dotenv.h  request.cc  request.h  router.cc  router.h  server.cc  server.h  types.h
